--- a/Licensing.Deviar/ClientApp/src/app/app.component.html
+++ b/Licensing.Deviar/ClientApp/src/app/app.component.html
@@ -6,7 +6,7 @@
             [(nzCollapsed)]="isCollapsed"
             [nzTrigger]="null">
     <div class="sidebar-logo">
-      <a href="https://ng.ant.design/" target="_blank">
+      <a href="https://licensing.deviar.net">
         <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
         <h1>Deviar Licensing</h1>
       </a>
