--- a/Licensing.Deviar/ClientApp/src/app/pages/my-software/my-software.component.scss
+++ b/Licensing.Deviar/ClientApp/src/app/pages/my-software/my-software.component.scss
@@ -7,3 +7,17 @@
 label {
   font-weight: 500;
 }
+
+@media only screen and (max-width: 768px) {
+  input, textarea {
+    width: 100%;
+  }
+
+  .button-container {
+    width: 100%;
+  }
+
+  .table-container {
+    overflow-x: scroll;
+  }
+}
