--- a/Licensing.Deviar/ClientApp/src/app/pages/my-software/my-software.component.scss
+++ b/Licensing.Deviar/ClientApp/src/app/pages/my-software/my-software.component.scss
@@ -8,6 +8,16 @@ label {
   font-weight: 500;
 }
 
+.grid-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-bottom: 5px;
+}
+
+nz-date-picker {
+  width: 100%;
+}
+
 @media only screen and (max-width: 768px) {
   input, textarea {
     width: 100%;
