--- a/Licensing.Deviar/ClientApp/src/app/app.component.scss
+++ b/Licensing.Deviar/ClientApp/src/app/app.component.scss
@@ -16,6 +16,12 @@
   box-shadow: 2px 0 6px rgba(0,21,41,.35);
 }
 
+.right-text {
+  position: relative;
+  right: 25px;
+  float: right;
+}
+
 .header-trigger {
   height: 64px;
   padding: 20px 24px;
